# NexEvent

./: .env.example  .eslintrc.json  .gitignore  README.md  package.json  tsconfig.json  turbo.json
.github/workflows/: ci.yml
apps/backend/: package.json  tsconfig.json
apps/backend/src/: app.ts  server.ts
apps/backend/src/lib/: db.ts  redis.ts
apps/backend/src/middleware/: adminAuth.ts  errorHandler.ts  requestLogger.ts
apps/backend/src/models/: AuditLog.ts  (+5 more)
apps/backend/tests/: routes.test.ts
apps/frontend/: index.html  package.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx
apps/worker/: package.json  tsconfig.json
apps/worker/src/: index.ts
contracts/: Cargo.toml
contracts/boilerplate/: Cargo.toml
contracts/boilerplate/src/: lib.rs  test.rs
contracts/gas_estimator/: Cargo.toml
contracts/gas_estimator/src/: lib.rs  test.rs
contracts/nft_royalty_emitter/: Cargo.toml
contracts/nft_royalty_emitter/src/: lib.rs  test.rs
contracts/oracle_aggregator/: Cargo.toml
contracts/oracle_aggregator/src/: lib.rs  test.rs
contracts/reward_pool/: Cargo.toml
contracts/reward_pool/src/: lib.rs  test.rs
contracts/stablecoin_emitter/: Cargo.toml
contracts/stablecoin_emitter/src/: lib.rs  test.rs
contracts/staking/: Cargo.toml
contracts/staking/src/: lib.rs  test.rs
contracts/token_vesting/: Cargo.toml
contracts/token_vesting/src/: lib.rs  test.rs
infrastructure/: docker-compose.yml
infrastructure/docker/: Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  nginx.conf
infrastructure/scripts/: seed.ts  setup.sh
(+32 files in other folders)
